welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (mess = "R") {
                 ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "L") {
                        ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "I") {
                        ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "A") {
                        ^BDRBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "B") {
                        ^BDRBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "C") {
                        ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "Z") {
                        ^BDRBuggle:26: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "Y") {
                        ^BDRBuggle:29: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "X") {
                        ^